zokrates_cli/examples/compile_errors/div_by_zero.zok
def main(field input) -> field {
    field divisor = [input, 0] != [input, 1] ? 0 : 1;
    return input / divisor;
}
